# sat_namev4

./: .env  .gitattributes  .gitignore  .replit  find_female_voice.py  fix_iris_brain.py  gamestate_integration_iris.cfg  main.py  pyproject.toml  replit.md  requirements.txt  setup.py  stream_stats.json  test_tts.py  test_tts_sound.py  test_vosk.py  voice_stats.json
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--wake-word-detection--1765952507227_1765952507228.txt  streamelements_client_1765902075685.py
src/: __init__.py  achievements.py  cs2_gsi.py  iris_brain.py  iris_visual.py  streamelements_client.py  tts_engine.py  voice_input.py  voice_recognition.py  windows_audio.py
src/utils/: __init__.py  tts_utils.py
temp_repo/: .replit
