[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "flask>=3.1.2",
    "groq>=0.37.1",
    "numpy>=2.3.5",
    "openai>=2.12.0",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "speechrecognition>=3.14.4",
    "trafilatura>=2.0.0",
    "websocket-client>=1.9.0",
]
